fix(navigation): items are now wrapping when they are too large

--- a/packages/demo/src/demo-styling/base/_base.scss
+++ b/packages/demo/src/demo-styling/base/_base.scss
@@ -58,10 +58,6 @@ figure {
     min-height: 100%;
 }
 
-.sg-navigation .navigation .navigation-menu {
-    height: 0 !important;
-}
-
 .vapor-header-logo {
     width: 245px;
     height: 65px;
